Bug 49510 - [G33 SNA] stipple offset problems in Wine
Summary: [G33 SNA] stipple offset problems in Wine
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-04 13:17 UTC by Matti Hämäläinen
Modified: 2012-05-29 14:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot demonstrating one of the issues (336.71 KB, image/png)
2012-05-04 13:17 UTC, Matti Hämäläinen
no flags Details
tweak stippling (1.29 KB, patch)
2012-05-29 13:32 UTC, Chris Wilson
no flags Details | Splinter Review

Description Matti Hämäläinen 2012-05-04 13:17:05 UTC
Created attachment 61046 [details]
Screenshot demonstrating one of the issues

With latest GIT, some stipple patterns look pseudorandomly corrupted/rendered wrong. Also there are some update problems leaving "trails" (see the linked video), though I am not sure if that is a driver issue or a Wine issue.

Wine version is latest GIT as of today.

Video (Theora/OGV): http://tnsp.org/~ccr/intel-gfx/sna-wine-corrupt.ogv

(And yes, I did take a look at Wine's bugtracker to see if there was anything that seemed related, but could not find anything.)

-- Window manager: WindowMaker 0.92
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31
Express Integrated Graphics Controller (rev 10)
-- system architecture: i686 / 32bit
-- xf86-video-intel: GIT 079b491ced2c9c3c73d938ef6025d040016ad3a7
-- xserver: X.Org X Server 1.12.1 from Debian unstable
-- mesa: 8.0.2-2 from Debian unstable
-- libpixman: 0.25.2-1
-- libdrm version: 2.4.33-1
-- kernel version: 3.3.4 (vanilla from kernel.org)
-- Linux distribution: Debian Testing aka Wheezy
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Chris Wilson 2012-05-04 13:28:13 UTC
Drat, I was quite confident there would be no more damage issues.

Have you checked with --enable-debug? (Note not --enable-debug=full, though that will be useful if you have a trivial reproduction or once I have a better idea of where to such for the needle.)
Comment 2 Chris Wilson 2012-05-29 13:32:24 UTC
Created attachment 62239 [details] [review]
tweak stippling
Comment 3 Matti Hämäläinen 2012-05-29 14:09:06 UTC
(In reply to comment #2)
> Created attachment 62239 [details] [review] [review]
> tweak stippling

That fixes it (as reported on IRC). Thanks.
Comment 4 Chris Wilson 2012-05-29 14:19:06 UTC
commit 68874e2d694cc68f5f051ba5fe4a79a71fdb2dbc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue May 29 21:28:39 2012 +0100

    sna: Fix chunking for large stipples
    
    Reported-and-tested-by: Matti Hamalainen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49510
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.